# Project-Seabot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: package.sh
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh
install/seabot_interfaces/share/seabot_interfaces/: package.sh
install/seabot_interfaces/share/seabot_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  export_seabot_interfaces__rosidl_generator_cExport-noconfig.cmake  seabot_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake
install/seabot_interfaces/share/seabot_interfaces/msg/: Feedback.idl
log/: latest_build
ros2_ws/install/: _local_setup_util_bat.py  local_setup.bat  local_setup.sh  setup.bash  setup.bat  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
ros2_ws/install/cpp_srvcli/lib/cpp_srvcli/: client  server
ros2_ws/install/cpp_srvcli/share/cpp_srvcli/: package.sh  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/cpp_pubsub/: CMakeLists.txt
ros2_ws/src/cpp_pubsub/src/: Publisher.cpp  Subscriber.cpp
ros2_ws/src/cpp_srvcli/: CMakeLists.txt
ros2_ws/src/cpp_srvcli/src/: Client.cpp  Server.cpp
ros2_ws/src/seabot_interfaces/: CMakeLists.txt
ros2_ws/src/seabot_interfaces/install/: local_setup.sh  setup.sh
ros2_ws/src/seabot_interfaces/log/: latest_build
(+110 files in other folders)
